学习三小时

--- a/文件/初级222222222/三子棋/三子棋.vcxproj
+++ b/文件/初级222222222/三子棋/三子棋.vcxproj
@@ -127,8 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="game.c" />
-    <ClCompile Include="test.c" />
+    <ClCompile Include="game.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
