--- a/文件/进阶333333333/数据的储存/数据的储存.vcxproj.filters
+++ b/文件/进阶333333333/数据的储存/数据的储存.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="b、反码、补码、源码.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="c.数据的存储.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
