--- a/魏德建老师布置题目/4.18/4.18.vcxproj
+++ b/魏德建老师布置题目/4.18/4.18.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="4.18.cpp" />
     <ClCompile Include="4.21.cpp" />
+    <ClCompile Include="4.22.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
