--- a/魏德建老师布置题目/4.18/4.18.vcxproj.filters
+++ b/魏德建老师布置题目/4.18/4.18.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="4.22.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="4.23.cpp">
+      <Filter>资源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
