--- a/魏德建老师布置题目/4.18/4.18.vcxproj
+++ b/魏德建老师布置题目/4.18/4.18.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="4.21.cpp" />
     <ClCompile Include="4.22.cpp" />
     <ClCompile Include="4.23.cpp" />
+    <ClCompile Include="4.24.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
