--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,37 @@
 /文件/自学/C和图片
 /文件/自学
 /学习/C语言图形化终极(基本贴图、切割贴图、透明贴图
+
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
