--- a/魏德建老师布置题目/4.18/4.18.vcxproj.filters
+++ b/魏德建老师布置题目/4.18/4.18.vcxproj.filters
@@ -24,10 +24,16 @@
     <ClCompile Include="4.22.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="4.23.cpp">
-      <Filter>资源文件</Filter>
-    </ClCompile>
     <ClCompile Include="4.24.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="5.5.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="4.23.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="5.5副本.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
