给远方的一个妹妹讲的题

--- a/魏德建老师布置题目/4.18/4.18.vcxproj
+++ b/魏德建老师布置题目/4.18/4.18.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="4.24.cpp" />
     <ClCompile Include="5.5.cpp" />
     <ClCompile Include="5.5副本.cpp" />
+    <ClCompile Include="5.7.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
