--- a/魏德建老师布置题目/4.18/4.18.vcxproj.filters
+++ b/魏德建老师布置题目/4.18/4.18.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="5.7.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="5.16.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
