研究动态数组

--- a/文件/初级222222222/数组------简单/数组------简单.vcxproj
+++ b/文件/初级222222222/数组------简单/数组------简单.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="一维数组.c" />
+    <ClCompile Include="一维数组.cpp" />
     <ClCompile Include="二维数组.c" />
     <ClCompile Include="基础.c" />
     <ClCompile Include="数组名.c" />
