忽略了几个该忽略的文件夹

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,7 @@ google-services.json
 *.lock
 *.vs
 .vs
+/文件/初级222222222/三子棋/x64
+/文件/初级222222222/三子棋/.vs
+/文件/初级222222222/扫雷游戏 - 副本/x64
+/文件/初级222222222/扫雷游戏 - 副本/.vs
