--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ google-services.json
 /文件/初级222222222/三子棋/.vs
 /文件/初级222222222/扫雷游戏 - 副本/x64
 /文件/初级222222222/扫雷游戏 - 副本/.vs
+/魏德建老师布置题目/打印图形/x64
+/文件/进阶333333333/数据的储存/x64
