--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,9 @@ google-services.json
 /文件/初级222222222/扫雷游戏 - 副本/.vs
 /魏德建老师布置题目/打印图形/x64
 /文件/进阶333333333/数据的储存/x64
+/文件/入门111111111/字符串/x64
+/文件/入门111111111/转义字符/x64
+/文件/入门111111111/转义字符/.vs
+/文件/入门111111111/字符串/.vs
+/文件/入门111111111/指针/x64
+/文件/入门111111111/指针/.vs
