--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,24 @@ google-services.json
 /文件/入门111111111/字符串/.vs
 /文件/入门111111111/指针/x64
 /文件/入门111111111/指针/.vs
+/文件/入门111111111/选择语句/x64
+/文件/入门111111111/选择语句/.vs
+/文件/入门111111111/数组/x64
+/文件/入门111111111/数组/.vs
+/文件/入门111111111/数据类型/x64
+/文件/入门111111111/数据类型/.vs
+/文件/入门111111111/输入函数/x64
+/文件/入门111111111/输入函数/.vs
+/文件/入门111111111/结构体/x64
+/文件/入门111111111/结构体/.vs
+/文件/入门111111111/函数/x64
+/文件/入门111111111/函数/.vs
+/文件/入门111111111/关键字和define/x64
+/文件/入门111111111/关键字和define/.vs
+/文件/入门111111111/常量/x64
+/文件/入门111111111/常量/.vs
+/文件/入门111111111/操作符/x64
+/文件/入门111111111/操作符/.vs
+/文件/入门111111111/hello world/x64
+/文件/入门111111111/hello world/.vs
+
