--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,4 @@ google-services.json
 /文件/入门111111111/hello world/x64
 /文件/入门111111111/hello world/.vs
 /文件/入门111111111/hello world/空项目     第一次/x64
+/文件/入门111111111/数据类型/.vs
