--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,5 @@ google-services.json
 /文件/入门111111111/hello world/.vs
 /文件/入门111111111/hello world/空项目     第一次/x64
 /文件/入门111111111/数据类型/.vs
+/文件/初级222222222/分支语句和循环语句/循环语句/while循环和getchar/x64
+/文件/初级222222222/分支语句和循环语句/循环语句/while循环和getchar/.vs
