--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,8 @@ google-services.json
 /文件/入门111111111/数据类型/.vs
 /文件/初级222222222/分支语句和循环语句/循环语句/while循环和getchar/x64
 /文件/初级222222222/分支语句和循环语句/循环语句/while循环和getchar/.vs
+/文件/初级222222222/分支语句和循环语句/练习题/x64
+/文件/初级222222222/分支语句和循环语句/练习题/.vs
+/文件/初级222222222/分支语句和循环语句/循环语句/for循环/x64
+/文件/初级222222222/小程序/自动关机/x64
+/文件/初级222222222/小程序/自动关机/.vs
