--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,4 @@ google-services.json
 /文件/初级222222222/分支语句和循环语句/循环语句/for循环/x64
 /文件/初级222222222/小程序/自动关机/x64
 /文件/初级222222222/小程序/自动关机/.vs
+/文件/初级222222222/分支语句和循环语句/循环语句/for循环/.vs
